# btop-win

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  theme-diagnostics.yml
docs/: ARCHITECTURE.md  CODE_REVIEW_2026-07-20.md  OPTIMIZATION_ROADMAP.md
releases/: v0.1.0.json  v0.2.0.json  v0.3.0.json
scripts/: install.ps1
src/: app.rs  collector.rs  config.rs  main.rs  model.rs  theme.rs  ui.rs  utils.rs
